--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <title>Home</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="stylesheet" href="styles.css" />
-    <script type="module" src="script.js"></script>
+    <link rel="stylesheet" href="./src/styles/app.css" />
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
+    <script type="module" src="./src/scripts/script.js"></script>
   </head>
   <body>
-    <nav>
+    <nav class="bg-orange-400">
       <a href="/" aria-current="page">Home</a>
-      <a href="/page2.html">Other page</a>
+      <a href="#">Other page</a>
     </nav>
     <main>
-      <h1>Home page</h1>
+      <h1 class="text-3xl" x-data=" {msg: 'Welcome home!'} " x-text="msg"></h1>
     </main>
   </body>
 </html>
