--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <script type="module" src="./src/scripts/script.js"></script>
   </head>
   <body>
-    <nav class="bg-orange-400">
-      <a href="/" aria-current="page">Home</a>
-      <a href="#">Other page</a>
+    <nav>
     </nav>
     <main>
       <h1 class="text-3xl" x-data=" {msg: 'Welcome home!'} " x-text="msg"></h1>
