--- a/index.html
+++ b/index.html
@@ -12,7 +12,115 @@
     <nav>
     </nav>
     <main>
-      <h1 class="text-3xl" x-data=" {msg: 'Welcome home!'} " x-text="msg"></h1>
+      
+      <div x-data=" {open: false} " class="bg-white md:bg-black">
+        <!--
+          Mobile menu
+
+          Off-canvas menu for mobile, show/hide based on off-canvas menu state.
+        -->
+        <div x-show="open" class="relative z-40" role="dialog" aria-modal="true">
+          <!--
+            Off-canvas menu backdrop, show/hide based on off-canvas menu state.
+
+            Entering: "transition-opacity ease-linear duration-300"
+              From: "opacity-0"
+              To: "opacity-100"
+            Leaving: "transition-opacity ease-linear duration-300"
+              From: "opacity-100"
+              To: "opacity-0"
+          -->
+          <div class="fixed inset-0 bg-black bg-opacity-25"></div>
+
+          <div class="fixed inset-0 z-40 flex">
+            <div @click.outside="open = false" class="relative flex w-full max-w-xs flex-col overflow-y-auto bg-white pb-12 shadow-xl">
+              <div class="flex px-4 pb-2 pt-5">
+                <button @click="open = false" type="button" class="relative -m-2 inline-flex items-center justify-center rounded-md p-2 text-gray-400">
+                  <span class="absolute -inset-0.5"></span>
+                  <span class="sr-only">Close menu</span>
+                  <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12" />
+                  </svg>
+                </button>
+              </div>
+
+              <div class="space-y-6 border-t border-gray-200 px-4 py-6">
+                <div class="flow-root">
+                  <a href="#" class="-m-2 block p-2 font-medium text-gray-900">Company</a>
+                </div>
+                <div class="flow-root">
+                  <a href="#" class="-m-2 block p-2 font-medium text-gray-900">Stores</a>
+                </div>
+              </div>
+
+              <div class="space-y-6 border-t border-gray-200 px-4 py-6">
+                <div class="flow-root">
+                  <a href="#" class="-m-2 block p-2 font-medium text-gray-900">Sign in</a>
+                </div>
+                <div class="flow-root">
+                  <a href="#" class="-m-2 block p-2 font-medium text-gray-900">Create account</a>
+                </div>
+              </div>
+
+              <div class="border-t border-gray-200 px-4 py-6">
+                <a href="#" class="-m-2 flex items-center p-2">
+                  <img src="https://tailwindui.com/img/flags/flag-canada.svg" alt="" class="block h-auto w-5 flex-shrink-0">
+                  <span class="ml-3 block text-base font-medium text-gray-900">CAD</span>
+                  <span class="sr-only">, change currency</span>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <header class="relative bg-white lg:hidden">
+          <nav aria-label="Top" class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+            <div class="border-b border-gray-200">
+              <div class="flex h-16 items-center">
+                <!-- Mobile menu toggle, controls the 'mobileMenuOpen' state. -->
+                <button @click="open = true" type="button" class="relative rounded-md bg-white p-2 text-gray-400 lg:hidden">
+                  <span class="absolute -inset-0.5"></span>
+                  <span class="sr-only">Open menu</span>
+                  <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+                    <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                  </svg>
+                </button>
+
+                <!-- Logo -->
+                <div class="ml-4 flex lg:ml-0">
+                  <a href="#">
+                    <span class="sr-only">Your Company</span>
+                    <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
+                  </a>
+                </div>
+
+                <!-- Flyout menus -->
+                <div class="hidden lg:ml-8 lg:block lg:self-stretch">
+                  <div class="flex h-full space-x-8">
+                    <a href="#" class="flex items-center text-sm font-medium text-gray-700 hover:text-gray-800">Home</a>
+                    <a href="#" class="flex items-center text-sm font-medium text-gray-700 hover:text-gray-800">About</a>
+                    <a href="#" class="flex items-center text-sm font-medium text-gray-700 hover:text-gray-800">Skills</a>
+                    <a href="#" class="flex items-center text-sm font-medium text-gray-700 hover:text-gray-800">Experiences</a>
+                  </div>
+                </div>
+
+                  <div class="hidden lg:ml-8 lg:flex">
+                    <a href="#" class="flex items-center text-gray-700 hover:text-gray-800">
+                      <img src="https://tailwindui.com/img/flags/flag-canada.svg" alt="" class="block h-auto w-5 flex-shrink-0">
+                      <span class="ml-3 block text-sm font-medium">CAD</span>
+                      <span class="sr-only">, change currency</span>
+                    </a>
+                  </div>
+
+                  </div>
+                </div>
+              </div>
+            </div>
+          </nav>
+        </header>
+      </div>
+
+
     </main>
   </body>
 </html>
