--- a/index.html
+++ b/index.html
@@ -45,25 +45,25 @@
               </div>
 
               <div class="space-y-6 border-t border-gray-200 px-4 py-6">
-                <div class="flow-root">
-                  <a href="#" class="-m-2 block p-2 font-medium text-gray-900">Company</a>
+                <div class="flow-root border-indigo-600 border-b-2">
+                  <button class="text-gray-900 flex-1 whitespace-nowrap px-1 py-4 text-base font-medium">Home</button>
                 </div>
-                <div class="flow-root">
-                  <a href="#" class="-m-2 block p-2 font-medium text-gray-900">Stores</a>
+                <div class="flow-root border-indigo-600 border-b-2">
+                  <button class="text-gray-900 flex-1 whitespace-nowrap px-1 py-4 text-base font-medium">About</button>
                 </div>
-              </div>
-
-              <div class="space-y-6 border-t border-gray-200 px-4 py-6">
-                <div class="flow-root">
-                  <a href="#" class="-m-2 block p-2 font-medium text-gray-900">Sign in</a>
+                <div class="flow-root border-indigo-600 border-b-2">
+                  <button class="text-gray-900 flex-1 whitespace-nowrap px-1 py-4 text-base font-medium">Skills</button>
                 </div>
-                <div class="flow-root">
-                  <a href="#" class="-m-2 block p-2 font-medium text-gray-900">Create account</a>
+                <div class="flow-root border-indigo-600 border-b-2">
+                  <button class="text-gray-900 flex-1 whitespace-nowrap px-1 py-4 text-base font-medium">Experiences</button>
+                </div>
+                <div class="flow-root border-indigo-600 border-b-2">
+                  <button class="text-gray-900 flex-1 whitespace-nowrap px-1 py-4 text-base font-medium">Contact</button>
                 </div>
               </div>
 
               <div class="border-t border-gray-200 px-4 py-6">
-                <a href="#" class="-m-2 flex items-center p-2">
+                <a href="" class="-m-2 flex items-center p-2">
                   <img src="https://tailwindui.com/img/flags/flag-canada.svg" alt="" class="block h-auto w-5 flex-shrink-0">
                   <span class="ml-3 block text-base font-medium text-gray-900">CAD</span>
                   <span class="sr-only">, change currency</span>
@@ -73,12 +73,12 @@
           </div>
         </div>
 
-        <header class="relative bg-white lg:hidden">
+        <header class="relative bg-white">
           <nav aria-label="Top" class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
             <div class="border-b border-gray-200">
               <div class="flex h-16 items-center">
                 <!-- Mobile menu toggle, controls the 'mobileMenuOpen' state. -->
-                <button @click="open = true" type="button" class="relative rounded-md bg-white p-2 text-gray-400 lg:hidden">
+                <button @click="open = true" type="button" class="relative rounded-md bg-white p-2 text-gray-400 sm-x:hidden">
                   <span class="absolute -inset-0.5"></span>
                   <span class="sr-only">Open menu</span>
                   <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
@@ -95,17 +95,19 @@
                 </div>
 
                 <!-- Flyout menus -->
-                <div class="hidden lg:ml-8 lg:block lg:self-stretch">
+                <div class="hidden sm-x:ml-8 sm-x:block sm=x:self-stretch">
                   <div class="flex h-full space-x-8">
-                    <a href="#" class="flex items-center text-sm font-medium text-gray-700 hover:text-gray-800">Home</a>
-                    <a href="#" class="flex items-center text-sm font-medium text-gray-700 hover:text-gray-800">About</a>
-                    <a href="#" class="flex items-center text-sm font-medium text-gray-700 hover:text-gray-800">Skills</a>
-                    <a href="#" class="flex items-center text-sm font-medium text-gray-700 hover:text-gray-800">Experiences</a>
+                    <!-- Selected: "border-indigo-600 text-indigo-600", Not Selected: "border-transparent text-gray-900" -->
+                    <button class="border-transparent text-gray-900 flex-1 whitespace-nowrap border-b-2 px-1 py-4 text-base font-medium">Home</button>
+                    <button class="border-transparent text-gray-900 flex-1 whitespace-nowrap border-b-2 px-1 py-4 text-base font-medium">About</button>
+                    <button class="border-transparent text-gray-900 flex-1 whitespace-nowrap border-b-2 px-1 py-4 text-base font-medium">Skills</button>
+                    <button class="border-transparent text-gray-900 flex-1 whitespace-nowrap border-b-2 px-1 py-4 text-base font-medium">Experiences</button>
+                    <button class="border-transparent text-gray-900 flex-1 whitespace-nowrap border-b-2 px-1 py-4 text-base font-medium">Contact</button>
                   </div>
                 </div>
 
-                  <div class="hidden lg:ml-8 lg:flex">
-                    <a href="#" class="flex items-center text-gray-700 hover:text-gray-800">
+                  <div class="ml-8 flex">
+                    <a href="" class="flex items-center text-gray-700 hover:text-gray-800">
                       <img src="https://tailwindui.com/img/flags/flag-canada.svg" alt="" class="block h-auto w-5 flex-shrink-0">
                       <span class="ml-3 block text-sm font-medium">CAD</span>
                       <span class="sr-only">, change currency</span>
