--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Mike D. Pascal</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="shortcut icon" href="https://lh3.googleusercontent.com/a/ACg8ocIOZgC0TM0HALPKP8OwtO-17QZ5JEXFB6QTduWlX51S7w=s288-c-no" type="image/x-icon">
     <link rel="stylesheet" href="./src/styles/app.css" />
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script type="module" src="./src/scripts/script.js"></script>
@@ -90,7 +91,7 @@
                 <div class="ml-4 flex lg:ml-0">
                   <a href="#">
                     <span class="sr-only">Your Company</span>
-                    <img class="h-8 w-auto" src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600" alt="">
+                    <img class="h-8 w-auto" src="https://lh3.googleusercontent.com/a/ACg8ocIOZgC0TM0HALPKP8OwtO-17QZ5JEXFB6QTduWlX51S7w=s288-c-no" alt="mike-d-pascal">
                   </a>
                 </div>
 
