--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Mike D. Pascal</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="shortcut icon" href="https://lh3.googleusercontent.com/a/ACg8ocIOZgC0TM0HALPKP8OwtO-17QZ5JEXFB6QTduWlX51S7w=s288-c-no" type="image/x-icon">
+    <link rel="shortcut icon" href="./src/imgs/logo.png" type="image/x-icon">
     <link rel="stylesheet" href="./src/styles/app.css" />
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <script type="module" src="./src/scripts/script.js"></script>
@@ -47,19 +47,19 @@
 
               <div class="space-y-6 border-t border-gray-200 px-4 py-6">
                 <div class="flow-root border-indigo-600 border-b-2">
-                  <button class="text-gray-900 flex-1 whitespace-nowrap px-1 py-4 text-base font-medium">Home</button>
+                  <button class="text-gray-700 flex-1 whitespace-nowrap px-1 py-4 text-base font-medium">Home</button>
                 </div>
                 <div class="flow-root border-indigo-600 border-b-2">
-                  <button class="text-gray-900 flex-1 whitespace-nowrap px-1 py-4 text-base font-medium">About</button>
+                  <button class="text-gray-700 flex-1 whitespace-nowrap px-1 py-4 text-base font-medium">About</button>
                 </div>
                 <div class="flow-root border-indigo-600 border-b-2">
-                  <button class="text-gray-900 flex-1 whitespace-nowrap px-1 py-4 text-base font-medium">Skills</button>
+                  <button class="text-gray-700 flex-1 whitespace-nowrap px-1 py-4 text-base font-medium">Skills</button>
                 </div>
                 <div class="flow-root border-indigo-600 border-b-2">
-                  <button class="text-gray-900 flex-1 whitespace-nowrap px-1 py-4 text-base font-medium">Experiences</button>
+                  <button class="text-gray-700 flex-1 whitespace-nowrap px-1 py-4 text-base font-medium">Experiences</button>
                 </div>
                 <div class="flow-root border-indigo-600 border-b-2">
-                  <button class="text-gray-900 flex-1 whitespace-nowrap px-1 py-4 text-base font-medium">Contact</button>
+                  <button class="text-gray-700 flex-1 whitespace-nowrap px-1 py-4 text-base font-medium">Contact</button>
                 </div>
               </div>
 
@@ -79,7 +79,7 @@
             <div class="border-b border-gray-200">
               <div class="flex h-16 items-center">
                 <!-- Mobile menu toggle, controls the 'mobileMenuOpen' state. -->
-                <button @click="open = true" type="button" class="relative rounded-md bg-white p-2 text-gray-400 sm-x:hidden">
+                <button @click="open = true" type="button" class="relative rounded-md bg-white p-2 text-gray-600 sm-x:hidden">
                   <span class="absolute -inset-0.5"></span>
                   <span class="sr-only">Open menu</span>
                   <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
@@ -91,19 +91,19 @@
                 <div class="ml-4 flex lg:ml-0">
                   <a href="#">
                     <span class="sr-only">Your Company</span>
-                    <img class="h-8 w-auto" src="https://lh3.googleusercontent.com/a/ACg8ocIOZgC0TM0HALPKP8OwtO-17QZ5JEXFB6QTduWlX51S7w=s288-c-no" alt="mike-d-pascal">
+                    <img class="h-8 w-auto" src="src/imgs/logo.png" alt="mike-d-pascal">
                   </a>
                 </div>
 
                 <!-- Flyout menus -->
                 <div class="hidden sm-x:ml-8 sm-x:block sm=x:self-stretch">
                   <div class="flex h-full space-x-8">
-                    <!-- Selected: "border-indigo-600 text-indigo-600", Not Selected: "border-transparent text-gray-900" -->
-                    <button class="border-transparent text-gray-900 flex-1 whitespace-nowrap border-b-2 px-1 py-4 text-base font-medium">Home</button>
-                    <button class="border-transparent text-gray-900 flex-1 whitespace-nowrap border-b-2 px-1 py-4 text-base font-medium">About</button>
-                    <button class="border-transparent text-gray-900 flex-1 whitespace-nowrap border-b-2 px-1 py-4 text-base font-medium">Skills</button>
-                    <button class="border-transparent text-gray-900 flex-1 whitespace-nowrap border-b-2 px-1 py-4 text-base font-medium">Experiences</button>
-                    <button class="border-transparent text-gray-900 flex-1 whitespace-nowrap border-b-2 px-1 py-4 text-base font-medium">Contact</button>
+                    <!-- Selected: "border-indigo-600 text-indigo-600", Not Selected: "border-transparent text-gray-600" -->
+                    <button class="border-transparent text-gray-600 flex-1 whitespace-nowrap border-b-2 px-1 py-4 text-base font-medium">Home</button>
+                    <button class="border-transparent text-gray-600 flex-1 whitespace-nowrap border-b-2 px-1 py-4 text-base font-medium">About</button>
+                    <button class="border-transparent text-gray-600 flex-1 whitespace-nowrap border-b-2 px-1 py-4 text-base font-medium">Skills</button>
+                    <button class="border-transparent text-gray-600 flex-1 whitespace-nowrap border-b-2 px-1 py-4 text-base font-medium">Experiences</button>
+                    <button class="border-transparent text-gray-600 flex-1 whitespace-nowrap border-b-2 px-1 py-4 text-base font-medium">Contact</button>
                   </div>
                 </div>
 
