--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </style>
   </head>
   <body x-data="{ dark: false }" x-bind:class="dark?'dark':'light'">
-    <div x-data=" {open: false} " class="bg-white">
+    <div x-data=" {open: false} " class="bg-white sticky top-0 left-0">
       <!--
         Mobile menu
 
@@ -53,19 +53,19 @@
 
             <div class="space-y-6 border-t border-gray-200 px-4 py-6">
               <div class="flow-root">
-                <button @click="open = false" class="m-op-01">Home</button>
+                <button @click="open = false" class="m-op-01"><a href="#home">Home</a></button>
               </div>
               <div class="flow-root">
-                <button @click="open = false" class="m-op-02">About</button>
+                <button @click="open = false" class="m-op-02"><a href="#about">About</a></button>
               </div>
               <div class="flow-root">
-                <button @click="open = false" class="m-op-03">Skills</button>
+                <button @click="open = false" class="m-op-03"><a href="#skills">Skills</a></button>
               </div>
               <div class="flow-root">
-                <button @click="open = false" class="m-op-04">Experiences</button>
+                <button @click="open = false" class="m-op-04"><a href="#exps">Experiences</a></button>
               </div>
               <div class="flow-root">
-                <button @click="open = false" class="m-op-05">Contact</button>
+                <button @click="open = false" class="m-op-05"><a href="#contact">Contact</a></button>
               </div>
             </div>
 
@@ -73,7 +73,7 @@
         </div>
       </div>
 
-      <header class="bg-white dark:bg-black sticky top-0">
+      <header class="bg-white dark:bg-black">
         <nav aria-label="Top" class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
             <div class="border-b border-gray-200">
               <div class="flex h-16 items-center justify-between">
@@ -89,8 +89,8 @@
                 <!-- Logo -->
                 <div class="ml-4 flex lg:ml-0">
                   <a href="#">
-                    <span class="sr-only">Your Company</span>
-                    <img class="h-8 w-auto" src="src/imgs/logo.png" alt="mike-d-pascal">
+                    <span class="sr-only">MDP</span>
+                    <a href="#home"><img class="h-8 w-auto" src="src/imgs/logo.png" alt="mike-d-pascal"></a>
                   </a>
                 </div>
 
@@ -98,11 +98,11 @@
                 <div class="hidden sm-x:ml-8 sm-x:block sm-x:self-stretch">
                   <div class="flex h-full space-x-8">
                     <!-- Selected: "border-indigo-600 text-indigo-600", Not Selected: "border-transparent text-gray-600" -->
-                    <button class="m-op-01">Home</button>
-                    <button class="m-op-02">About</button>
-                    <button class="m-op-03">Skills</button>
-                    <button class="m-op-04">Experiences</button>
-                    <button class="m-op-05">Contact</button>
+                    <button class="m-op-01"><a href="#home">Home</a></button>
+                    <button class="m-op-02"><a href="#about">About</a></button>
+                    <button class="m-op-03"><a href="#skills">Skills</a></button>
+                    <button class="m-op-04"><a href="#exps">Experiences</a></button>
+                    <button class="m-op-05"><a href="#contact">Contact</a></button>
                   </div>
                 </div>
 
@@ -129,7 +129,17 @@
       </header>
     </div>
     <main> 
-      
+
+      <div id="home" class="bg-blue-300 aspect-[2/1]">HOME</div>
+
+      <div id="about" class="bg-blue-900 aspect-[2/1]">ABOUT</div>
+
+      <div id="skills" class="bg-blue-700 aspect-[2/1]">SKILLS</div>
+
+      <div id="exps" class="bg-blue-200 aspect-[2/1]">EXPERIENCES</div>
+
+      <div id="contact" class="bg-blue-600 aspect-[2/1]">CONTACT</div>
+
     </main>
   </body>
 </html>
