--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
       <div id="exps" class="bg-blue-200 aspect-[2/1]">EXPERIENCES</div>
 
-      <div id="contact" class="bg-blue-600 aspect-[2/1]">CONTACT</div>
+      <div id="contact" class="bg-blue-600 aspect-[1]">CONTACT</div>
 
     </main>
   </body>
