--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         border: none;
         outline: double currentColor;
         border-radius: 7px;
+        /*color: #5984c4b7;*/
       }
     </style>
   </head>
@@ -40,7 +41,7 @@
         <div class="fixed inset-0 bg-black bg-opacity-25"></div>
 
         <div class="fixed inset-0 z-40 flex">
-          <div @click.outside="open = false" class="relative flex w-full max-w-xs flex-col overflow-y-auto bg-white pb-12 shadow-xl">
+          <div @click.outside="open = false" class="relative flex w-full max-w-xs flex-col overflow-y-auto bg-white dark:bg-gray-800 pb-12 shadow-xl">
             <div class="flex px-4 pb-2 pt-5">
               <button @click="open = false" type="button" class="relative -m-2 inline-flex items-center justify-center rounded-md p-2 text-gray-400">
                 <span class="absolute -inset-0.5"></span>
@@ -51,7 +52,7 @@
               </button>
             </div>
 
-            <div class="space-y-6 border-t border-gray-200 px-4 py-6">
+            <div class="space-y-6 border-t border-gray-200 dark:border-gray-700 px-4 py-6">
               <div class="flow-root">
                 <button @click="open = false" class="m-op-01"><a href="#home">Home</a></button>
               </div>
@@ -73,12 +74,12 @@
         </div>
       </div>
 
-      <header class="bg-white dark:bg-black">
+      <header class="bg-white dark:bg-gray-800">
         <nav aria-label="Top" class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
             <div class="border-b border-gray-200">
               <div class="flex h-16 items-center justify-between">
                 <!-- Mobile menu toggle, controls the 'mobileMenuOpen' state. -->
-                <button @click="open = true" type="button" class="relative rounded-md bg-white p-2 text-gray-600 sm-x:hidden">
+                <button @click="open = true" type="button" class="relative rounded-md bg-white p-2 text-gray-600 dark:text-gray-200 sm-x:hidden">
                   <span class="absolute -inset-0.5"></span>
                   <span class="sr-only">Open menu</span>
                   <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
@@ -88,10 +89,10 @@
 
                 <!-- Logo -->
                 <div class="ml-4 flex lg:ml-0">
-                  <a href="#">
+                  <div>
                     <span class="sr-only">MDP</span>
                     <a href="#home"><img class="h-8 w-auto" src="src/imgs/logo.png" alt="mike-d-pascal"></a>
-                  </a>
+                  </div>
                 </div>
 
                 <!-- Flyout menus -->
