--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
     <link rel="shortcut icon" href="./src/imgs/logo.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,1,0" />
     <link rel="stylesheet" href="./src/styles/app.css" />
     <script defer type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
@@ -131,15 +134,52 @@
     </div>
     <main> 
 
-      <div id="home" class="bg-blue-300 aspect-[2/1]">HOME</div>
+      <div id="home" class="aspect-[2/1] container mx-auto grid grid-cols-1 md:grid-cols-2 px-3 py-6">
+        <div id="_name" class="flex items-center justify-center">
+          <div>
+            <p>Hello, I'm</p>
+            <h1>Mike D. Pascal</h1>
+            <h4>Web Developer</h4>
+            <p>
+              <span class="material-symbols-outlined">
+                mail
+              </span>
+              mikepascal.delta@gmail.com
+            </p>
+            <p>
+              <span class="material-symbols-outlined">
+                call
+              </span>
+              +1 514-299-8184
+            </p>
+            <p>
+              <span class="material-symbols-outlined">
+                pin_drop
+              </span>
+              Montreal, Canada
+            </p>
+            <p>
+              <img src="" alt="_facebook">
+              <img src="" alt="_twitter">
+              <img src="" alt="_github">
+              <img src="" alt="_telegram">
+            </p>
+          </div>
+        </div>
+        <div id="_photo" class="flex items-center justify-center">
+          <div class="rounded-full border-orange-800 border-[15px] p-3 w-[23rem] h-[23rem]">
+            <img class="w-full h-full rounded-full" src="./src/imgs/foto-perfil-mike.png" alt="_profile">
+          </div>
+        </div>
+      </div>
 
-      <div id="about" class="bg-blue-900 aspect-[2/1]">ABOUT</div>
+      <div id="about" class="bg-blue-900 aspect-[2/1] container mx-auto">ABOUT</div>
 
-      <div id="skills" class="bg-blue-700 aspect-[2/1]">SKILLS</div>
+      <div id="skills" class="bg-blue-700 aspect-[2/1] container mx-auto">SKILLS</div>
 
-      <div id="exps" class="bg-blue-200 aspect-[2/1]">EXPERIENCES</div>
+      <div id="exps" class="bg-blue-200 aspect-[2/1] container mx-auto">EXPERIENCES</div>
 
-      <div id="contact" class="bg-blue-600 aspect-[1]">CONTACT</div>
+      <div id="contact" class="bg-blue-600 aspect-[1] container mx-auto">CONTACT</div>
 
     </main>
   </body>
