--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
       <header class="bg-white dark:bg-gray-800">
         <nav aria-label="Top" class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
-            <div class="border-b border-gray-200">
+            <div class="border-b border-gray-200 dark:border-gray-700">
               <div class="flex h-16 items-center justify-between">
                 <!-- Mobile menu toggle, controls the 'mobileMenuOpen' state. -->
                 <button @click="open = true" type="button" class="relative rounded-md bg-white p-2 text-gray-600 dark:text-gray-200 sm-x:hidden">
