--- a/index.html
+++ b/index.html
@@ -139,19 +139,19 @@
             <h1 class="mb-2 text-4xl font-semibold">Mike D. Pascal</h1>
             <h4 class="mb-5 text-2xl">Web Developer</h4>
             <p class="flex items-center gap-3 mb-2">
-              <span class="material-symbols-outlined">
+              <span translate="no" class="material-symbols-outlined">
                 mail
               </span>
               <span>mikepascal.delta@gmail.com</span>
             </p>
             <p class="flex items-center gap-3 mb-2">
-              <span class="material-symbols-outlined">
+              <span translate="no" class="material-symbols-outlined">
                 call
               </span>
               <span>+1 514-299-8184</span>
             </p>
             <p  class="flex items-center gap-3 mb-5">
-              <span class="material-symbols-outlined">
+              <span translate="no" class="material-symbols-outlined">
                 pin_drop
               </span>
               <span>Montreal, Canada</span>
