--- a/index.html
+++ b/index.html
@@ -158,13 +158,13 @@
             </p>
             <p class="flex gap-4 mb-7">
               <!-- https://www.pngfind.com/pngs/b/57-579617_facebook-logo-circle-black-transparent-social-media-icons.png -->
-              <img class="w-7 h-7 hover:w-6 hover:h-6 cursor-pointer" x-bind:src="dark ? 'https://cdn.freebiesupply.com/images/large/2x/facebook-logo-circle-transparent.png' : 'https://www.pngfind.com/pngs/b/57-579617_facebook-logo-circle-black-transparent-social-media-icons.png'" alt="_facebook">
+              <a href="https://www.facebook.com/mike.pascal.967?mibextid=ZbWKwL" target="_blank"><img class="w-7 h-7 hover:w-6 hover:h-6" x-bind:src="dark ? 'https://cdn.freebiesupply.com/images/large/2x/facebook-logo-circle-transparent.png' : 'https://www.pngfind.com/pngs/b/57-579617_facebook-logo-circle-black-transparent-social-media-icons.png'" alt="_facebook"></a>
               <!-- https://i.pinimg.com/564x/e0/fc/a0/e0fca0dd47becbf0dbf7152dcb15c1b4.jpg -->
-              <img class="w-7 h-7 hover:w-6 hover:h-6 cursor-pointer" x-bind:src="dark ? 'https://static.vecteezy.com/system/resources/previews/023/986/514/non_2x/instagram-logo-instagram-logo-transparent-instagram-icon-transparent-free-free-png.png' :  'https://i.pinimg.com/564x/e0/fc/a0/e0fca0dd47becbf0dbf7152dcb15c1b4.jpg'" alt="_instagram">
+              <a href="https://www.instagram.com/mike9_73?igsh=MXF0OWc5NDJmdDRwZg==" target="_blank"><img class="w-7 h-7 hover:w-6 hover:h-6" x-bind:src="dark ? 'https://static.vecteezy.com/system/resources/previews/023/986/514/non_2x/instagram-logo-instagram-logo-transparent-instagram-icon-transparent-free-free-png.png' :  'https://i.pinimg.com/564x/e0/fc/a0/e0fca0dd47becbf0dbf7152dcb15c1b4.jpg'" alt="_instagram"></a>
               <!-- https://cdn-icons-png.flaticon.com/512/25/25231.png -->
-              <img class="w-7 h-7 hover:w-6 hover:h-6 cursor-pointer" x-bind:src=" dark ? 'https://cdn2.iconfinder.com/data/icons/social-icons-33/128/Github-512.png' : 'https://cdn-icons-png.flaticon.com/512/25/25231.png'" alt="_github">
+              <a href="https://github.com/Mikeprogrammer973" target="_blank"><img class="w-7 h-7 hover:w-6 hover:h-6" x-bind:src=" dark ? 'https://cdn2.iconfinder.com/data/icons/social-icons-33/128/Github-512.png' : 'https://cdn-icons-png.flaticon.com/512/25/25231.png'" alt="_github"></a>
               <!-- https://pngimg.com/d/telegram_PNG17.png -->
-              <img class="w-7 h-7 hover:w-6 hover:h-6 cursor-pointer" x-bind:src="dark ? 'https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Telegram_logo.svg/2048px-Telegram_logo.svg.png' : 'https://pngimg.com/d/telegram_PNG17.png'" alt="_telegram">
+              <a href="https://t.me/mikeprogrammer973" target="_blank"><img class="w-7 h-7 hover:w-6 hover:h-6" x-bind:src="dark ? 'https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/Telegram_logo.svg/2048px-Telegram_logo.svg.png' : 'https://pngimg.com/d/telegram_PNG17.png'" alt="_telegram"></a>
             </p>
           </div>
         </div>
